portfolio atualizado com o projeto fullstack

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
             <h1>Sobre mim:</h1>
             <p>
                 Olá! Sou engenheira e Desenvolvedora Fullstack na área de Tecnologia da Informação (TI).<br>           
-                Em 2023 cursei programação da Kenzie Academy Brasilme participei de diversos projetos resolvendo problemas de alto nível e desenvolvendo habilidades.<br>
+                Em 2023 cursei programação da Kenzie Academy Brasil e participei de diversos projetos resolvendo problemas de alto nível e desenvolvendo habilidades.<br>
                 Na kenzie, trabalhei como monitora, o que me permitiu aprimorar ainda mais minhas habilidades em programação.<br>
+                Em janeiro participarei, no período noturno, de um Bootcamp backend Python e Djangom com WoMakersCode.
                 Esse é o meu Portfólio com alguns dos meus projetos!
             </p>         
         </section>
@@ -99,12 +100,26 @@
                 <h1>Projetos</h1>
                 <div class="container-projeto">
                     <div class="nf">
+                        <h4>Agenda Virtual</h4>
+                        <p> React, styled-components, Node.js, TypeORM, TypeScript </p>
+                    </div>
+                    <p>É meu primeiro projeto full stack! Nesse projeto é possível se cadastrar no agenda virtual e ao logar é possível criar contatos, atualizar
+                        e deletar os contatos. É possível também atualizar seus dados e deletar sua conta.
+                    </p>
+                    <div class="aplicacao-codigo">
+                        <a class="ap" href="https://github.com/MelissaGasque/AgendaVirtual-front">Código Front-end &#128156</a>
+                        <a class="code" href="https://github.com/MelissaGasque/AgendaVirtual-back">Código Back-end &#128156</a>
+                    </div>
+                </div>
+                <div class="container-projeto">
+                    <div class="nf">
                         <h4>Kenzie Hub</h4>
                         <p> React, styled-components</p>
                     </div>
                     <p>É um projeto utilizando React e styled-components. O projeto possui 3 páginas, a página Login, a página Register e a 
                         página interna. Na Register é possível realizar um cadastro, em seguida o usuário consegue entrar na página interna por 
-                        meio da página login. Na página interna é possível adicionar cursos que o usuário participa.
+                        meio da página login. Na página interna é possível adicionar e deletar cursos que o usuário participa.<br>
+                        (obs: A api pode demorar alguns minutos para funcionar)
                     </p>
                     <div class="aplicacao-codigo">
                         <a class="ap" href="https://react-entrega-kenzie-hub-melissa-gasque-d1u8ntxo5-melissagasque.vercel.app/">Aplicação &#128153</a>
@@ -113,11 +128,11 @@
                 </div>
                 <div  class="container-projeto">
                     <div class="nf">
-                        <h4>Burguer Kenzie</h4>
+                        <h4>Burguer da Mel</h4>
                         <p> React, styled-components</p>
                     </div>
-                    <p>É um projeto básico, criado com React e styled-components, de um site de hamburguers. É possível adicionar e excluir 
-                        produtos no carrinho e procurar pelos produtos na barra de pesquisa
+                    <p>É um projeto criado com React e styled-components, de um site de hamburguers. É possível adicionar e excluir 
+                        produtos no carrinho e procurar pelos produtos na barra de pesquisa.
                     </p>
                     <div class="aplicacao-codigo">
                         <a class="ap" href="https://react-entrega-s3-template-hamburgueria-melissa-gasque.vercel.app/">Aplicação &#128153</a>
@@ -131,17 +146,18 @@
                     </div>
                     <p>É um projeto no qual o usuário pode verificar sobre os filmes e os comentários de forma logada e não logada. Na forma 
                         não logada o usuário pode apenas ler as sinopses e os comentários, já os usuários logados podem criar comentários nos 
-                        filmes, editar e remover seus comentários.
+                        filmes, editar e remover seus comentários.<br>
+                        (obs: A api pode demorar alguns minutos para funcionar)
                     </p>
                     <div class="aplicacao-codigo"><a class="ap" href="https://m3-s7-kenzie-movie-entrega-template-grupo-3-t17-raphael-smoky.vercel.app/">Aplicação &#128153 </a></div>
                 </div>
                 <div  class="container-projeto">
                     <div class="nf">
-                        <h4>KImoveis</h4>
+                        <h4>imobiliaria</h4>
                         <p> Node.js, TypeORM, TypeScript</p>
                     </div>
                     <p>É um projeto backend de uma imobiliaria que realiza o cadastro de imóveis e de usuários interessados na
-                        aquisição de propriedades. É p[ossível realizar o agendamento e consultar horários de visitas às propriedades
+                        aquisição de propriedades. É possível realizar o agendamento e consultar horários de visitas às propriedades
                         disponíveis no banco de dados da imobiliária.
                     </p>
                     <div class="aplicacao-codigo">
