adição do postgreSQL

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <div class="container-projeto">
                     <div class="nf">
                         <h4>Agenda Virtual</h4>
-                        <p> React, styled-components, Node.js, TypeORM, TypeScript </p>
+                        <p> React, styled-components, Node.js, TypeORM, PostgreSQL, TypeScript </p>
                     </div>
                     <p>É meu primeiro projeto full stack! Nesse projeto é possível se cadastrar no agenda virtual e ao logar é possível criar contatos, atualizar
                         e deletar os contatos. É possível também atualizar seus dados e deletar sua conta.
@@ -154,7 +154,7 @@
                 <div  class="container-projeto">
                     <div class="nf">
                         <h4>imobiliaria</h4>
-                        <p> Node.js, TypeORM, TypeScript</p>
+                        <p> Node.js, TypeORM, PostgreSQL, TypeScript</p>
                     </div>
                     <p>É um projeto backend de uma imobiliaria que realiza o cadastro de imóveis e de usuários interessados na
                         aquisição de propriedades. É possível realizar o agendamento e consultar horários de visitas às propriedades
@@ -167,7 +167,7 @@
                 <div  class="container-projeto">
                     <div class="nf">
                         <h4>KCurso</h4>
-                        <p> Django, TypeScript, Python</p>
+                        <p> Django, TypeScript, PostgreSQL, Python</p>
                     </div>
                     <p>É um projeto backend que realiza o cadastro de usuários e cursos. É possível adicionar dados sobre os cursos e
                         adicionar e mostrar os estudantes.
