Adição do target=_blank

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 Olá! Sou engenheira e Desenvolvedora Fullstack na área de Tecnologia da Informação (TI).<br>           
                 Em 2023 cursei programação da Kenzie Academy Brasil e participei de diversos projetos resolvendo problemas de alto nível e desenvolvendo habilidades.<br>
                 Na kenzie, trabalhei como monitora, o que me permitiu aprimorar ainda mais minhas habilidades em programação.<br>
-                Em janeiro participarei, no período noturno, de um Bootcamp backend Python e Djangom com WoMakersCode.
+                De janeiro a abril participarei, no período noturno, do Bootcamp backend Python e Django com WoMakersCode.
                 Esse é o meu Portfólio com alguns dos meus projetos!
             </p>         
         </section>
@@ -92,8 +92,8 @@
     <main>
         <section class="main-button">
             <h3>Acessar meus sites</h3>
-            <a href="https://www.linkedin.com/in/melissa-gasque-597152180/" class="main-button-button">Acessar perfil no LinkedIn</a>
-            <a href="https://github.com/MelissaGasque" class="main-button-button">Acessar GitHub</a>
+            <a href="https://www.linkedin.com/in/melissa-gasque-597152180/" class="main-button-button" target="_blank">Acessar perfil no LinkedIn</a>
+            <a href="https://github.com/MelissaGasque" class="main-button-button" target="_blank">Acessar GitHub</a>
         </section>
         <section class="main-aside-container">
             <div class="main-aside">
@@ -107,8 +107,8 @@
                         e deletar os contatos. É possível também atualizar seus dados e deletar sua conta.
                     </p>
                     <div class="aplicacao-codigo">
-                        <a class="ap" href="https://github.com/MelissaGasque/AgendaVirtual-front">Código Front-end &#128156</a>
-                        <a class="code" href="https://github.com/MelissaGasque/AgendaVirtual-back">Código Back-end &#128156</a>
+                        <a class="ap" href="https://github.com/MelissaGasque/AgendaVirtual-front" target="_blank">Código Front-end &#128156</a>
+                        <a class="code" href="https://github.com/MelissaGasque/AgendaVirtual-back" target="_blank">Código Back-end &#128156</a>
                     </div>
                 </div>
                 <div class="container-projeto">
@@ -122,8 +122,8 @@
                         (obs: A api pode demorar alguns minutos para funcionar)
                     </p>
                     <div class="aplicacao-codigo">
-                        <a class="ap" href="https://react-entrega-kenzie-hub-melissa-gasque-d1u8ntxo5-melissagasque.vercel.app/">Aplicação &#128153</a>
-                        <a class="code" href="https://github.com/MelissaGasque/react-entrega-kenzie-hub_MelissaGasque">Código &#128156</a>
+                        <a class="ap" href="https://react-entrega-kenzie-hub-melissa-gasque-d1u8ntxo5-melissagasque.vercel.app/" target="_blank">Aplicação &#128153</a>
+                        <a class="code" href="https://github.com/MelissaGasque/react-entrega-kenzie-hub_MelissaGasque" target="_blank">Código &#128156</a>
                     </div>
                 </div>
                 <div  class="container-projeto">
@@ -135,8 +135,8 @@
                         produtos no carrinho e procurar pelos produtos na barra de pesquisa.
                     </p>
                     <div class="aplicacao-codigo">
-                        <a class="ap" href="https://react-entrega-s3-template-hamburgueria-melissa-gasque.vercel.app/">Aplicação &#128153</a>
-                        <a class="code" href="https://github.com/MelissaGasque/react-entrega-s3-template-hamburgueria_MelissaGasque">Código &#128156</a>
+                        <a class="ap" href="https://react-entrega-s3-template-hamburgueria-melissa-gasque.vercel.app/" target="_blank">Aplicação &#128153</a>
+                        <a class="code" href="https://github.com/MelissaGasque/react-entrega-s3-template-hamburgueria_MelissaGasque" target="_blank">Código &#128156</a>
                     </div>
                 </div>
                 <div  class="container-projeto">
@@ -149,7 +149,7 @@
                         filmes, editar e remover seus comentários.<br>
                         (obs: A api pode demorar alguns minutos para funcionar)
                     </p>
-                    <div class="aplicacao-codigo"><a class="ap" href="https://m3-s7-kenzie-movie-entrega-template-grupo-3-t17-raphael-smoky.vercel.app/">Aplicação &#128153 </a></div>
+                    <div class="aplicacao-codigo"><a class="ap" href="https://m3-s7-kenzie-movie-entrega-template-grupo-3-t17-raphael-smoky.vercel.app/" target="_blank">Aplicação &#128153 </a></div>
                 </div>
                 <div  class="container-projeto">
                     <div class="nf">
@@ -161,19 +161,19 @@
                         disponíveis no banco de dados da imobiliária.
                     </p>
                     <div class="aplicacao-codigo">
-                        <a class="code" href="https://github.com/MelissaGasque/m4-kimoveis_MelissaGasque">Código &#128156</a>
+                        <a class="code" href="https://github.com/MelissaGasque/m4-kimoveis_MelissaGasque" target="_blank">Código &#128156</a>
                     </div>
                 </div>
                 <div  class="container-projeto">
                     <div class="nf">
-                        <h4>KCurso</h4>
+                        <h4>Curso EAD</h4>
                         <p> Django, TypeScript, PostgreSQL, Python</p>
                     </div>
                     <p>É um projeto backend que realiza o cadastro de usuários e cursos. É possível adicionar dados sobre os cursos e
                         adicionar e mostrar os estudantes.
                     </p>
                     <div class="aplicacao-codigo">
-                        <a class="code" href="">Código &#128156</a> 
+                        <a class="code" href="https://github.com/MelissaGasque/backend-Python-Django_Curso_EAD_MelissaGasque" target="_blank">Código &#128156</a> 
                     </div>
                 </div>
             </div>
