--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/style.css">
+    <script src="src/script.js" defer></script>
     <title>Portfólio Melissa Gasque</title>
 </head>
 <body>
@@ -92,7 +93,7 @@
     <main>
         <section class="main-button">
             <h3>Acessar meus sites</h3>
-            <a href="https://www.linkedin.com/in/melissa-gasque-597152180/" class="main-button-button" target="_blank">Acessar perfil no LinkedIn</a>
+            <a href="https://www.linkedin.com/in/melissa-gasque-597152180/" class="main-button-button" target="_blank">Acessar LinkedIn</a>
             <a href="https://github.com/MelissaGasque" class="main-button-button" target="_blank">Acessar GitHub</a>
         </section>
         <section class="main-aside-container">
